--- a/singolo1.css
+++ b/singolo1.css
@@ -129,7 +129,9 @@ text-align: left;
 display: inline-block ;
 margin-left: 40px;
 margin-right: 40px;
-margin-top: 20px;
+margin-top: 21px;
+text-align: justify;
+/* word-spacing: .42px; */
 letter-spacing: .42px;
 }
 .footer__p span {
