fix: add button and placeholder

--- a/singolo3.css
+++ b/singolo3.css
@@ -87,7 +87,7 @@ body{
   .form__discribe {
     height: 185px;
     width: 605px;
-    margin-bottom: 58px;
+    margin-bottom: 7px;
     background-color: #d6564f;
     border: none;
     border-radius: 5px;
@@ -183,7 +183,19 @@ body{
     background-color: #2d303a;
     font-weight: 400;
   }
-
+  .button{
+    background-color: #88383b;
+    width: 200px;
+    text-align: center;
+    padding: 10px 0;
+    color: #f0d8d9;
+    font-size: 1.2rem;
+    letter-spacing: 0;
+  }
+  .button:hover{
+    cursor: pointer;
+    background-color: #9c4b47;
+  }
   
 
   
