add: index, style

--- a/singolo2.css
+++ b/singolo2.css
@@ -85,13 +85,13 @@ html {
   height: 622px;
   overflow: hidden;
 }
-.img {
+/* .img {
   width: 220px;
   height: 187px;
 }
 .img img {
   width: 100%;
-}
+} */
                                            /* AboutUs */
 .aboutUs {
   max-width: 1020px;
